# Cpp20_Ultimate_Vulkan_Project_Template

./: CMakeLists.txt  CMakePresets.json  README.md  build.sh  run.sh  vcpkg.json  vulkanapp1.sln
Application1/: Application1.vcxproj  CMakeLists.txt
VulkanApplication1/: CMakeLists.txt  VulkanApplication1.cpp  VulkanApplication1.vcxproj  VulkanApplication1.vcxproj.filters
VulkanSDK/: VulkanSDK install readme.txt  install_vulkan_debian.sh  uninstall_vulkan_debian.sh
VulkanStaticLib1/: CMakeLists.txt  VulkanStaticLib1.vcxproj  VulkanStaticLib1.vcxproj.filters  framework.h
VulkanStaticLib1/include/: crossvulkandevice.hpp  crossvulkandispatch.hpp  crossvulkaninstance.hpp  crossvulkanloader.hpp  vulkanbuffers.hpp  vulkancommands.hpp  vulkancore.hpp  vulkandescriptors.hpp  vulkanpipeline.hpp  vulkanshaders.h  vulkantextures.hpp
VulkanStaticLib1/src/: VulkanStaticLib1.cpp  shader.frag  shader.vert  vulkanbuffers.cpp  vulkancommands.cpp  vulkancore.cpp  vulkanpipeline.cpp  vulkantextures.cpp
cmakeapp1/: CMakeLists.txt
cmakevulkanapp1/: CMakeLists.txt  Header.h  avulkancamera.hpp  cmakevulkanapp1.cpp  compile_shaders.bat
cmakevulkanapp1/shaders/: shader.vert
docs/: setupVulkanWin32.bat.txt
vulkanapp1/: CMakeLists.txt  Header.h  avulkanheaderonly.hpp  vulkanapp1.cpp  vulkanapp1.vcxproj  vulkanapp1.vcxproj.filters
vulkanapp1/shaders/: shader.frag
